kubernetes/apps/networking/traefik/add-ons/policies/update-ingress-annotations.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: update-ingress-annotations
  annotations:
    policies.kyverno.io/title: Update ingress annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates auth annotations on ingresses, external-dns,
      and sets an explicit RFC1918 whitelist for any ingresses
      that are not not exposed to the internet.
spec:
  background: true
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  validationFailureAction: enforce

  rules:
    - name: ensure-annotation-present
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              namespaces:
                - kube-system
                - "*"
      validate:
        message: "You must have ingress.home.arpa annotation set to internal/external/external-auth"
        pattern:
          metadata:
            annotations:
              ingress.home.arpa: "internal|external|external-auth"

    - name: websecure
      match:
        any:
          - resources:
              kinds: ["Ingress"]
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(traefik.ingress.kubernetes.io/router.entrypoints): websecure

    - name: internal
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                ingress.home.arpa: "internal"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(traefik.ingress.kubernetes.io/router.middlewares): "networking-internal@kubernetescrd"

    - name: external
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                ingress.home.arpa: "external"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.alpha.kubernetes.io/target): "${SECRET_DOMAIN_NAME}"
              +(traefik.ingress.kubernetes.io/router.middlewares): "networking-cloudflare-only@kubernetescrd"

    - name: external-auth
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                ingress.home.arpa: "external-auth"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.alpha.kubernetes.io/target): "${SECRET_DOMAIN_NAME}"
              +(traefik.ingress.kubernetes.io/router.middlewares): "networking-external-auth@kubernetescrd"
